--- a/erpnext/projects/doctype/timesheet/timesheet.py.save.1
+++ b/erpnext/projects/doctype/timesheet/timesheet.py.save.1
@@ -20,9 +20,6 @@ class OverWorkLoggedError(frappe.ValidationError): pass
 
 class Timesheet(Document):
 	def validate(self):
-		#NEW
-		#self.timesheet_check()
-		#------
 		self.set_employee_name()
 		self.set_supplier_name()
 		self.set_status()
@@ -67,7 +64,7 @@ class Timesheet(Document):
 				self.total_billable_amount += flt(d.billing_amount)
 				self.total_billed_amount += flt(d.billing_amount) if d.sales_invoice else 0.0
 				self.total_billed_hours += flt(d.billing_hours) if d.sales_invoice else 0.0
-
+			
 			# NEW
 			self.total_purchasable_hours += flt(d.hours)
 			self.total_purchasable_amount += flt(d.costing_amount)
@@ -79,20 +76,11 @@ class Timesheet(Document):
 		if self.total_billed_amount > 0 and self.total_billable_amount > 0:
 			self.per_billed = (self.total_billed_amount * 100) / self.total_billable_amount
 
-	# NEW -------------------------------------------------
+	# NEW
 	def calculate_percentage_purchased(self):
 		self.per_purchased = 0
 		if self.total_purchased_amount > 0 and self.total_purchasable_amount > 0:
 			self.per_purchased = (self.total_purchased_amount * 100) / self.total_purchasable_amount
-
-	#def timesheet_check(self):
-		#saved_doc = frappe.get_doc('Timesheet', self.name)
-		#if saved_doc.time_logs != self.time_logs:
-			#for time in saved_doc.time_logs:
-				#frappe.msgprint(_("saved_doc.time_logs {0}").format(time.name))
-			#for time in self.time_logs:
-				#frappe.msgprint(_("self.time_logs {0}").format(time.name))
-	#------------------------------------------------------
 
 	def update_billing_hours(self, args):
 		if args.billable:
@@ -400,7 +388,7 @@ def get_events(start, end, filters=None):
 			`tabTimesheet Detail`.docstatus as status, `tabTimesheet Detail`.parent as parent,
 			from_time as start_date, hours, activity_type,
 			`tabTimesheet Detail`.project, to_time as end_date,
-			CONCAT(`tabTimesheet Detail`.parent, ' (', ROUND(hours,2),' hrs)') as title
+q			CONCAT(`tabTimesheet Detail`.parent, ' (', ROUND(hours,2),' hrs)') as title
 		from `tabTimesheet Detail`, `tabTimesheet`
 		where `tabTimesheet Detail`.parent = `tabTimesheet`.name
 			and `tabTimesheet`.docstatus < 2
